--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.6",
     "mysql": "^2.18.1",
     "next": "12.2.3",
+    "next-auth": "^4.10.2",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
