--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
@@ -18,6 +19,7 @@
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "sass": "^1.54.0",
     "styled-components": "^5.3.5"
   },
