--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "js-cookie": "^3.0.1",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
-    "typewriter-effect": "^2.19.0",
-    "react-icons": "^4.4.0"
-    
+    "react-icons": "^4.4.0",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
