--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "next": "12.2.3",
     "next-auth": "^4.10.2",
     "next-connect": "^0.13.0",
+    "nodemailer": "^6.7.7",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
