--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
     "morgan": "^1.10.0",
+    "multer": "^1.3.0",
+    "multer-gridfs-storage": "^1.3.0",
     "mysql": "^2.18.1",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
