--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
+    "swr": "^1.3.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
